--- a/documentation/source/general/changelog/0.6.rst
+++ b/documentation/source/general/changelog/0.6.rst
@@ -57,15 +57,18 @@ Jasp tutorial
 
 More details and an user friendly walkthrough through the added functionalities of the Jasp module are provided in :ref:`documentation <jasp>` or in the :ref:`Jasp tutorial <jasp_tutorial>`.
 
+Double-Bracket Quantum Imaginary Time Evolution (DB-QITE)
+---------------------------------------------------------
+
+* :ref:`Implementation of the DB-QITE algorithm <QITE>`, which allows you to prepare ground states of arbitrary Hamiltonians, and provides means to systematically improve the approximation of a ground state using shalow circuits, as described in the `DB-QITE paper by Marek Gluza et.al. <https://arxiv.org/abs/2412.04554>`_
+* Example on how to solve :ref:`MaxCut using DB-QITE <MaxCutQITE>`
 
 Integration of Quantum Monte Carlo with Iterative QAE
 -----------------------------------------------------
 
-Numerical integration is now available within Qrisp, which allows for approximating integrals not solvable analytically. Such integrals appear in many different places, from chemistry, through many-body physics, to mathematical finance.
-
-This is done by combining Quantum Monte Carlo techniques with a resource efficient amplitude estimation algorithm, which iteratively applies quantum amplitude amplification to find an estimation for the probability of measuring a good state (more info in :ref:`IQAE <IQAE>`)
-
-More details and example of using this approach for integrating the function $f(x)=x^2$ w.r.t. the uniform distribution over the interval $[0,1]$ can be found in the :ref:`tutorial <QMCItutorial>`.
+* Numerical integration is now available within Qrisp, which allows for approximating integrals not solvable analytically. Such integrals appear in many different places, from chemistry, through many-body physics, to mathematical finance.
+* This is done by combining :ref:`Quantum Monte Carlo <QMCI>` techniques with a :ref:`resource efficient amplitude estimation algorithm <IQAE>`, which iteratively applies quantum amplitude amplification to find an estimation for the probability of measuring a good state (more info in :ref:`IQAE <IQAE>`)
+* More details and example of using this approach for integrating the function $f(x)=x^2$ w.r.t. the uniform distribution over the interval $[0,1]$ can be found in the :ref:`tutorial <QMCItutorial>`.
 
 UI Changes
 ----------
