--- a/src/qrisp/examples/jasp_demo.ipynb
+++ b/src/qrisp/examples/jasp_demo.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dfe19bf-7979-450e-8921-fe45d1432d84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://shorturl.at/nXuEx"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9918bf03-b930-4c7f-adec-a9bafcc102de",
    "metadata": {},
@@ -17,10 +27,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "c770249c-137c-4b45-9263-7f77726571bc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ \u001b[34m\u001b[22m\u001b[1mlambda \u001b[39m\u001b[22m\u001b[22m; a\u001b[35m:QuantumCircuit\u001b[39m b\u001b[35m:i64[]\u001b[39m. \u001b[34m\u001b[22m\u001b[1mlet\n",
+      "    \u001b[39m\u001b[22m\u001b[22mc\u001b[35m:QuantumCircuit\u001b[39m d\u001b[35m:QubitArray\u001b[39m = jasp.create_qubits a b\n",
+      "    e\u001b[35m:Qubit\u001b[39m = jasp.get_qubit d 0\n",
+      "    f\u001b[35m:QuantumCircuit\u001b[39m = jasp.h c e\n",
+      "    g\u001b[35m:Qubit\u001b[39m = jasp.get_qubit d 1\n",
+      "    h\u001b[35m:QuantumCircuit\u001b[39m = jasp.cx f e g\n",
+      "    i\u001b[35m:QuantumCircuit\u001b[39m j\u001b[35m:i64[]\u001b[39m = jasp.measure h d\n",
+      "    k\u001b[35m:QuantumCircuit\u001b[39m = jasp.reset i d\n",
+      "    l\u001b[35m:QuantumCircuit\u001b[39m = jasp.delete_qubits k d\n",
+      "  \u001b[34m\u001b[22m\u001b[1min \u001b[39m\u001b[22m\u001b[22m(l, j) }\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp import *\n",
     "from qrisp.jasp import *\n",
@@ -52,10 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "b02aeffb-7e93-4ec0-bca6-7e226fadcfd5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0                                                                                    \u001b[2K\n"
+     ]
+    }
+   ],
    "source": [
     "print(jaspr(5))"
    ]
@@ -70,10 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "27a9feb7-d81a-41fe-9090-fbb23078fd9e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3                                                                                    \u001b[2K\n"
+     ]
+    }
+   ],
    "source": [
     "@jaspify\n",
     "def main(i):\n",
@@ -111,10 +154,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "b491510a-a302-4bde-b253-e6012ff2a775",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "; ModuleID = 'LLVMDialectModule'\n",
+      "source_filename = \"LLVMDialectModule\"\n",
+      "target datalayout = \"e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128\"\n",
+      "target triple = \"x86_64-unknown-linux-gnu\"\n",
+      "\n",
+      "@\"{'shots': 0, 'mcmc': False, 'num_burnin': 0, 'kernel_name': None}\" = internal constant [66 x i8] c\"{'shots': 0, 'mcmc': False, 'num_burnin': 0, 'kernel_name': None}\\00\"\n",
+      "@LightningSimulator = internal constant [19 x i8] c\"LightningSimulator\\00\"\n",
+      "@\"/home/positr0nium/miniforge3/envs/qrisp/lib/python3.10/site-packages/pennylane_lightning/liblightning_qubit_catalyst.so\" = internal constant [120 x i8] c\"/home/positr0nium/miniforge3/envs/qrisp/lib/python3.10/site-packages/pennylane_lightning/liblightning_qubit_catalyst.so\\00\"\n",
+      "@__constant_1024xi64 = private constant [1024 x i64] zeroinitializer\n",
+      "@__constant_30xi64 = private constant [30 x i64] [i64 30, i64 29, i64 28, i64 27, i64 26, i64 25, i64 24, i64 23, i64 22, i64 21, i64 20, i64 19, i64 18, i64 17, i64 16, i64 15, i64 14, i64 13, i64 12, i64 11, i64 10, i64 9, i64 8, i64 7, i64 6, i64 5, i64 4, i64 3, i64 2, i64 1]\n",
+      "\n",
+      "declare void @__catalyst__rt__finalize()\n",
+      "\n",
+      "declare void @__catalyst__rt__initialize(ptr)\n",
+      "\n",
+      "declare void @__catalyst__qis__PauliX(ptr, ptr)\n",
+      "\n",
+      "declare ptr @__catalyst__qis__Measure(ptr, i32)\n",
+      "\n",
+      "declare void @__catalyst__qis__CNOT(ptr, ptr, ptr)\n",
+      "\n",
+      "declare void @__catalyst__qis__Hadamard(ptr, ptr)\n",
+      "\n",
+      "declare ptr @__catalyst__rt__array_get_element_ptr_1d(ptr, i64)\n",
+      "\n",
+      "declare ptr @__catalyst__rt__qubit_allocate_array(i64)\n",
+      "\n",
+      "declare void @__catalyst__rt__device_init(ptr, ptr, ptr, i64)\n",
+      "\n",
+      "declare void @_mlir_memref_to_llvm_free(ptr)\n",
+      "\n",
+      "declare ptr @_mlir_memref_to_llvm_alloc(i64)\n",
+      "\n",
+      "define { ptr, ptr, i64 } @jit_jaspr_function(ptr %0, ptr %1, i64 %2) {\n",
+      "  call void @__catalyst__rt__device_init(ptr @\"/home/positr0nium/miniforge3/envs/qrisp/lib/python3.10/site-packages/pennylane_lightning/liblightning_qubit_catalyst.so\", ptr @LightningSimulator, ptr @\"{'shots': 0, 'mcmc': False, 'num_burnin': 0, 'kernel_name': None}\", i64 0)\n",
+      "  %4 = call ptr @__catalyst__rt__qubit_allocate_array(i64 25)\n",
+      "  %5 = load i64, ptr %1, align 4\n",
+      "  %6 = call ptr @_mlir_memref_to_llvm_alloc(i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1024) to i64))\n",
+      "  %7 = insertvalue { ptr, ptr, i64, [1 x i64], [1 x i64] } undef, ptr %6, 0\n",
+      "  %8 = insertvalue { ptr, ptr, i64, [1 x i64], [1 x i64] } %7, ptr %6, 1\n",
+      "  %9 = insertvalue { ptr, ptr, i64, [1 x i64], [1 x i64] } %8, i64 0, 2\n",
+      "  %10 = insertvalue { ptr, ptr, i64, [1 x i64], [1 x i64] } %9, i64\n"
+     ]
+    }
+   ],
    "source": [
     "qir_string = jaspr.to_qir()\n",
     "print(qir_string[:2500])"
@@ -133,10 +225,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "b0a49866-6d82-4906-941e-36b646102079",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0131170749664307\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -172,10 +272,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "0ed87e8c-61af-4cc6-8369-d05eeca5ac4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.022090196609497\n"
+     ]
+    }
+   ],
    "source": [
     "@qache\n",
     "def inner_function(qv):\n",
@@ -184,7 +292,7 @@
     "\n",
     "def main():\n",
     "    qf = QuantumFloat(5)\n",
-    "    qbl = QuantumBool(5)\n",
+    "    qbl = QuantumBool()\n",
     "\n",
     "    inner_function(qf)\n",
     "    inner_function(qf)\n",
@@ -210,10 +318,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "51997b89-b3fc-428c-ba95-d7e7a63014f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i is dynamic?:  True\n",
+      "j is dynamic?:  True\n",
+      "k is dynamic?:  True\n",
+      "l is dynamic?:  False\n",
+      "G is dynamic?:  False\n"
+     ]
+    }
+   ],
    "source": [
     "from jax.core import Tracer\n",
     "\n",
@@ -254,10 +374,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "ce8e8278-b779-4ee7-b042-b29fe196f304",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0                                                                                    \u001b[2K\n"
+     ]
+    }
+   ],
    "source": [
     "@jaspify\n",
     "def main(k):\n",
@@ -291,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "2516cbf8-e5e8-4a38-825e-2ee64f73ea55",
    "metadata": {},
    "outputs": [],
@@ -320,10 +448,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "e0d41b31-fa4e-4299-b850-ac3303a3aa01",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True                                                                                 \u001b[2K\n",
+      "False                                                                                \u001b[2K\n",
+      "False                                                                                \u001b[2K\n"
+     ]
+    }
+   ],
    "source": [
     "print(main(1, 6, 1))\n",
     "print(main(3, 6, 1))\n",
@@ -343,10 +481,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "0c721b7f-50a7-4442-88a5-38ad99976c42",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1                                                                                    \u001b[2K\n",
+      "1                                                                                    \u001b[2K\n",
+      "3                                                                                    \u001b[2K\n",
+      "0                                                                                    \u001b[2K\n",
+      "2                                                                                    \u001b[2K\n"
+     ]
+    }
+   ],
    "source": [
     "@jaspify\n",
     "def main():\n",
@@ -388,10 +538,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "09fd5295-68a9-4de0-aed6-bf17d44ea95a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31.0                                                                                 \u001b[2K\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp.jasp import RUS, make_jaspr\n",
     "from qrisp import QuantumFloat, h, cx, measure\n",
@@ -434,10 +592,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "851a0a3f-64ef-453d-8bab-e6e6b7d8ffe8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(31.0, 5.0): 26, (30.0, 5.0): 24}                                                   \u001b[2K\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "@RUS\n",
@@ -450,13 +616,15 @@
     "    \n",
     "    return cancelation_bool, qf\n",
     "\n",
-    "@terminal_sampling\n",
+    "@terminal_sampling(shots = 50)\n",
     "def main():\n",
     "\n",
     "    qf = rus_trial_function()\n",
     "    h(qf[0])\n",
+    "    qf_2 = QuantumFloat(5)\n",
+    "    qf_2[:] = 5\n",
     "\n",
-    "    return qf\n",
+    "    return qf, qf_2\n",
     "\n",
     "print(main())"
    ]
@@ -471,10 +639,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "ad3c678d-b524-4784-9cde-04966897c7b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0.0: 1.0}                                                                           \u001b[2K\n",
+      "{1.0: 0.5, 5.0: 0.5}                                                                 \u001b[2K\n",
+      "{0.0: 1.0}                                                                           \u001b[2K\n",
+      "{1.0: 0.5, 5.0: 0.5}                                                                 \u001b[2K\n",
+      "{0.0: 1.0}                                                                           \u001b[2K\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp import QuantumBool, measure, control\n",
     "\n",
@@ -517,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "d47dfe1f-6d04-4e1e-9b4a-05faf20da12c",
    "metadata": {},
    "outputs": [],
@@ -574,10 +754,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "2793d8d1-73df-4d9b-bfe0-de4ca15953fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.430185317993164\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "t0 = time.time()\n",
@@ -595,10 +783,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "e197d7f3-c954-400c-b4f6-98a515106865",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1440.0\n",
+      "Took 0.006090641021728516 to simulate 120 iterations\n"
+     ]
+    }
+   ],
    "source": [
     "t0 = time.time()\n",
     "print(main(3, 4, 120)) # Expected to be 3*4*120 = 1440\n",
@@ -615,10 +812,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "93a7e489-ea30-43ce-a195-5d56b4a666c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "475690240.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(main(532, 233, 1000000))"
    ]
@@ -636,10 +841,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "342f1bdc-4b9c-408b-b267-fee3e02b919f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Loss: 1.1255793726499572\n",
+      "Epoch 10, Loss: 1.075287382286886\n",
+      "Epoch 20, Loss: 1.0277242824464026\n",
+      "Epoch 30, Loss: 0.9834605224633858\n",
+      "Epoch 40, Loss: 0.9429307856413472\n",
+      "Epoch 50, Loss: 0.9063988210301136\n",
+      "Epoch 60, Loss: 0.8739494586871209\n",
+      "Epoch 70, Loss: 0.845496268788587\n",
+      "Epoch 80, Loss: 0.8208042884256824\n",
+      "Epoch 90, Loss: 0.7995303839215936\n",
+      "Final accuracy: 0.49931600689888\n"
+     ]
+    }
+   ],
    "source": [
     "import jax\n",
     "import jax.numpy as jnp\n",
@@ -701,10 +924,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "c36ba0fb-b9e6-4b01-bd66-7c06dda7b1af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0                                                                                  \u001b[2K\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp.jasp import *\n",
     "from qrisp import *\n",
