minor changes to the LCU changelog entry

--- a/documentation/source/general/changelog/0.7.rst
+++ b/documentation/source/general/changelog/0.7.rst
@@ -10,7 +10,9 @@ With this version, users will find not only innovative new primitives and protoc
 Linear Combination Of Unitaries
 -------------------------------
 
-`LCU <https://arxiv.org/abs/1202.5822>`_ was initially conceived for improving the precision of Hamiltonian simulations but since then has become a core tool for a diverse field of  algorithms. The technique relies on a :ref:`non-unitary feedback loop <RUS>` to add up the unitaries of several user-specified quantum functions. Within the quantum software landscape the importance of LCU has been recognized within some artifacts implementing the `"loop body" <https://github.com/Classiq/classiq-library/blob/main/tutorials/classiq_101/quantum_primitives/linear_combination_of_unitaries/linear_combination_of_unitaries.ipynb>`_ but to the best of our knowledge no framework implements the means for compiling the whole workflow down to a low-level representation. This changes with Qrisp 0.7.
+`LCU <https://arxiv.org/abs/1202.5822>`_ was initially conceived for improving the precision of Hamiltonian simulations but since then has become a core tool for a diverse field of quantum algorithms including `QSP <https://journals.aps.org/prxquantum/abstract/10.1103/PRXQuantum.5.020368>`_, `QSVT <https://dl.acm.org/doi/abs/10.1145/3313276.3316366>`_, `LCHS <https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.131.150603>`_, and `optimization via dynamical simulation <https://arxiv.org/abs/2502.04285>`_. Qrisp 0.7 makes all of the above possible: i.e. LCHS (Linear Combination of Hamiltonian Simulation) utilizing the operators module and Trotterization methods for passing the Hamiltonian simulation unitary through the LCU protocol. 
+
+The technique relies on a :ref:`non-unitary feedback loop <RUS>` to add up the unitaries of several user-specified quantum functions. Within the quantum software landscape the importance of LCU has been recognized within some artifacts implementing the `"loop body" <https://github.com/Classiq/classiq-library/blob/main/tutorials/classiq_101/quantum_primitives/linear_combination_of_unitaries/linear_combination_of_unitaries.ipynb>`_ but to the best of our knowledge no framework implements the means for compiling the whole workflow down to a low-level representation. This changes with Qrisp 0.7.
 
 Using our new :ref:`LCU` primitive it is possible to perform a streamlined and efficient implementation of the workflow using an arbitrary set of user-specified functions.
 
