--- a/documentation/source/general/changelog/0.7.rst
+++ b/documentation/source/general/changelog/0.7.rst
@@ -37,7 +37,7 @@ Iterative Quantum Phase Estimation
 Resource estimation
 -------------------
 
-Estimating the resources of large scale quantum algorithms has become an `important field of research <https://qre2024.quantumresource.org/>`_, as it provides concrete indicators, which purposes future quantum computers might be suitable for. A variety of frameworks exists for tackling this problem - in many cases however the framework can either (a) not compile/simulate the full algorithm, which makes it hard to verify correctness or (b) can only estimate the resources at limited scale. With Jasp we can now do both! The :ref:`count_ops <count_ops>` decorator uses the tight embedding into classically established compilation infrastructure to compile a binary program that computes the required resources. This allows us to probe algorithms with billions of gates within only a few seconds! By switching out the decorator to :ref:`jaspify`, we can simulate the exact same code without any changes on a smaller scale.
+Estimating the resources of large scale quantum algorithms has become an `important field of research <https://qre2024.quantumresource.org/>`_, as it provides concrete indicators, which purposes future quantum computers might be suitable for. A variety of frameworks exists for tackling this problem - in many cases however the framework can either (a) not compile/simulate the full algorithm, which makes it hard to verify correctness or (b) can only estimate the resources at limited scale. With Jasp we can now do both! The :ref:`count_ops <count_ops>` decorator uses the tight embedding into classically established compilation infrastructure to compile a binary program that computes the required resources. This allows us to probe algorithms at 1000000000 gates/s! By switching out the decorator to :ref:`jaspify`, we can simulate the exact same code without any changes on a smaller scale.
 
 Other Jaspified features
 ------------------------
