add more notebooks

--- a/documentation/source/general/tutorial/H2.ipynb
+++ b/documentation/source/general/tutorial/H2.ipynb
@@ -15,20 +15,9 @@
     "\\def\\NN{\\bf N}\n",
     "$$\n",
     "\n",
-    "Quantum computing offers a promising avenue for simulating complex\n",
-    "molecular systems, potentially revolutionizing fields like drug\n",
-    "discovery, materials science, and chemical engineering. At the heart of\n",
-    "this capability lies Hamiltonian simulation, a powerful technique that\n",
-    "allows us to model the quantum behavior of molecules with exponentially\n",
-    "less resources compared to classical computers. In this tutorial, we'll\n",
-    "explore how to simulate molecules using Hamiltonian simulation\n",
-    "techniques implemented in Qrisp. Since version 0.5, Qrisp provides a\n",
-    "user-friendly interface for simulating quantum many body systems, making\n",
-    "it a suitable tool for tackling complex quantum chemistry problems.\n",
-    "We'll cover the following key aspects:\n",
+    "Quantum computing offers a promising avenue for simulating complex molecular systems, potentially revolutionizing fields like drug discovery, materials science, and chemical engineering. At the heart of this capability lies Hamiltonian simulation, a powerful technique that allows us to model the quantum behavior of molecules with exponentially less resources compared to classical computers. In this tutorial, we'll explore how to simulate molecules using Hamiltonian simulation techniques implemented in Qrisp. Since version 0.5, Qrisp provides a user-friendly interface for simulating quantum many body systems, making it a suitable tool for tackling complex quantum chemistry problems. We'll cover the following key aspects:\n",
     "\n",
-    "-   The fundamentals of Hamiltonian simulation and the second\n",
-    "    quantization\n",
+    "-   The fundamentals of Hamiltonian simulation and the second quantization\n",
     "-   Loading molecular data into Qrisp\n",
     "-   Performing Hamiltonian simulation\n",
     "\n",
@@ -51,7 +40,7 @@
     "\n",
     "$$\\ket{\\phi} = \\sum_{i = 0}^\\infty a_i \\ket{\\psi_i},\\quad a_i \\in \\mathbb{C}$$\n",
     "\n",
-    "What these particular $\\ket{\\psi_i}\\$ represent depends on the system.\n",
+    "What these particular $\\ket{\\psi_i}$ represent depends on the system.\n",
     "For instance for the Hydrogen atom these basis vectors represent the\n",
     "[atomic orbitals](https://en.wikipedia.org/wiki/Atomic_orbital). If you\n",
     "participated in a course for atomic physics before, you might have seen\n",
@@ -64,14 +53,14 @@
     "\n",
     "The **second quantization** now describes how systems including\n",
     "*multiple particles* are treated. For this the so called ladder\n",
-    "operators are introduced, that is, for each basis state \\$\\ket{\\psi_i}\\$\n",
-    "there is an operator \\$a_i^\\dagger\\$, which creates a particle in state\n",
-    "\\$\\ket{\\psi_i}\\$. A creative notation for this might be:\n",
+    "operators are introduced, that is, for each basis state $\\ket{\\psi_i}$\n",
+    "there is an operator $a_i^\\dagger$, which creates a particle in state\n",
+    "$\\ket{\\psi_i}$. A creative notation for this might be:\n",
     "\n",
     "$$a_i^\\dagger \\ket{\\phi} = \\ket{\\phi \\text{ + a particle in state i}}$$\n",
     "\n",
     "For this reason, this operator is called the \"creator\". Similarly there\n",
-    "is also the \"annihilator\" \\$a_i\\$, which destroys the particle.\n",
+    "is also the \"annihilator\" $a_i$, which destroys the particle.\n",
     "\n",
     "The ladder operators therefore determine the intrinsic interaction\n",
     "behavior of the particles. Observations from experiments show that there\n",
@@ -93,7 +82,7 @@
     "\\{a^\\dagger_i, a^\\dagger_j\\} = \\{a_i, a_j\\} = 0\n",
     "\\end{aligned}$$\n",
     "\n",
-    "Note that the fermionic laws imply \\$a_i^\\dagger a_i^\\dagger = 0\\$. This\n",
+    "Note that the fermionic laws imply $a_i^\\dagger a_i^\\dagger = 0$. This\n",
     "means that an operator, which tries to insert two particles in the same\n",
     "state will immidiately become 0 and therefore not contribute. This is\n",
     "known as [Pauli exclusion\n",
@@ -203,7 +192,7 @@
     "\n",
     "$$a_k = A_k \\prod_{i = 0}^{k-1} Z_i$$\n",
     "\n",
-    "Where \\$A_k = \\ket{0}\\bra{1}\\$ and \\$Z_i\\$ are the Pauli-Z Operators. Feel\n",
+    "Where $A_k = \\ket{0}\\bra{1}$ and $Z_i$ are the Pauli-Z Operators. Feel\n",
     "free to verify that this indeed satisfies the anti-commutator relations!\n",
     "We can apply the Jordan-Wigner embedding with the corresponding method:"
    ]
@@ -237,10 +226,10 @@
     "class. What is the difference to a\n",
     "[FermionicOperator](https://www.qrisp.eu/reference/Operators/FermionicOperator.html)? While FermionicOperators\n",
     "model the more abstract fermion space, qubit operators represent\n",
-    "operators on the qubit space $(\\mathbb{C}^2)^{\\otimes n}\\$ and can be\n",
+    "operators on the qubit space $(\\mathbb{C}^2)^{\\otimes n}$ and can be\n",
     "simulated and evaluated efficiently using a quantum computer. In\n",
     "particular, QubitOperators can represent tensor products of the\n",
-    "following operators \\$X,Y,Z,A,C,P^0,P^1,I\\$. Make sure to read the\n",
+    "following operators $X,Y,Z,A,C,P^0,P^1,I$. Make sure to read the\n",
     "[documentation](https://www.qrisp.eu/reference/Operators/QubitOperator.html#qrisp.operators.qubit.QubitOperator) to learn about their definition!\n",
     "\n",
     "### Dynamics\n",
@@ -251,9 +240,9 @@
     "\n",
     "Where \\$H\\$ is a hermitian operator called Hamiltonian. *Hamiltonian\n",
     "simulation* is the procedure of mimicing the dynamics of a physical\n",
-    "system described by a Hamiltonian \\$H\\$ using a quantum computer. In\n",
+    "system described by a Hamiltonian $H$ using a quantum computer. In\n",
     "other words: creating the state $\\ket{\\phi, t} = \\text{exp}(iHt)\\ket{\\phi,\n",
-    "0}\\$ artificially to evaluate some of its properties.\n",
+    "0}$ artificially to evaluate some of its properties.\n",
     "\n",
     "For bosonic systems, the Hamiltonian can only be a linear combination of\n",
     "products of the bosonic ladder operators. The equivalent holds for\n",
@@ -267,7 +256,7 @@
     "$$H = h_{01}(a_0a^\\dagger_1 + a_1a^\\dagger_0) + h_{00}a_0a^\\dagger_0$$\n",
     "\n",
     "The particular values of the coefficients (like $h_{01}$ and\n",
-    "$h_{00}\\$) are determined by the specifics of the system. For many\n",
+    "$h_{00}$) are determined by the specifics of the system. For many\n",
     "systems of interest these numbers involve the computation of some\n",
     "integrals - a task that can be efficiently performed on the classical\n",
     "computer.\n",
