--- a/documentation/source/general/tutorial/Sudoku.ipynb
+++ b/documentation/source/general/tutorial/Sudoku.ipynb
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "801bf334",
    "metadata": {},
    "outputs": [
@@ -603,11 +603,7 @@
     "res_qbls = eval_cq_checks({0: [1,2,3], 1 : [1,2,3], 2 : [1,2,3]}, q_assigments)\n",
     "\n",
     "for qbl in res_qbls:\n",
-    "    print(qbl)\n",
-    "# Yields\n",
-    "# {False: 1.0}\n",
-    "# {True: 1.0}\n",
-    "# {True: 1.0}"
+    "    print(qbl)"
    ]
   },
   {
