--- a/documentation/source/general/tutorial/QIROtutorial.ipynb
+++ b/documentation/source/general/tutorial/QIROtutorial.ipynb
@@ -7,14 +7,14 @@
    "source": [
     "# Quantum-Informed Recursive Optimization\n",
     "\n",
-    "This tutorial will give you an overview of problem specific implementations for solving optimization problems with the [Quantum Approximate Optimization Algorithm (QAOA)](../../qaoa/qaoa_core.rst).\n",
+    "This tutorial will give you an overview of problem specific implementations for solving optimization problems with the [Quantum Approximate Optimization Algorithm (QAOA)](/reference/Algorithms/qaoa/QAOA.html).\n",
     "\n",
-    "The Quantum Approximate Optimization Algorithm (QAOA), is used to solve combinatorical optimization problem instances of NP-hard problems. For further information see our [tutorial on QAOA](../../qaoa/QAOA101.rst)! \n",
+    "The Quantum Approximate Optimization Algorithm (QAOA), is used to solve combinatorical optimization problem instances of NP-hard problems. For further information see our [tutorial on QAOA](QAOAtutorial/index.html)! \n",
     "\n",
     "The paper [Quantum-Informed Recursive Optimization Algorithms (2023)](https://journals.aps.org/prxquantum/abstract/10.1103/PRXQuantum.5.020327) by J. Finzgar et. al. establishes a blueprint for developing alogrithms that update the problem instance recursively, based on the correlations in results obtained by QAOA.\n",
     "While QAOA cost functions are designed with specific problem instances in mind, this research has shown promising improvements to this to approach by further leveraging the problem structure.\n",
     "\n",
-    "We have implemented this approach for different problem instances, namely [MaxClique](../../qiro/MaxCliqueQIRO.rst), [MaxIndependentSet](../../qiro/MaxIndependentSetQIRO.rst), [MaxSat](../../qiro/MaxSatQIRO.rst) and [MaxSetPacking](../../qiro/MaxSetPackingQIRO.rst). The explanation below tackles the [Maximum Indepent Set (MIS)](https://en.wikipedia.org/wiki/Maximal_independent_set) problem, in analogy to the original paper by Finzgar et. al."
+    "We have implemented this approach for different problem instances, namely [MaxClique](/reference/Algorithms/qiro/implementations/QIROMaxClique.html), [MaxIndependentSet](/reference/Algorithms/qiro/implementations/QIROMaxIndep.html), [MaxSat](/reference/Algorithms/qiro/implementations/QIROMaxSat.html#maxsatqiro) and [MaxSetPacking](/reference/Algorithms/qiro/implementations/QIROMaxSetPack.html). The explanation below tackles the [Maximum Indepent Set (MIS)](https://en.wikipedia.org/wiki/Maximal_independent_set) problem, in analogy to the original paper by Finzgar et. al."
    ]
   },
   {
@@ -24,7 +24,7 @@
    "source": [
     "## Starting point of the algorithm\n",
     "\n",
-    "The algorithm evaluates the result of a [QAOA](../../qaoa/qaoa_core.rst) optimization procedure to establish correlations in the solution space, then recursively updates the problem structure. We will further assume that you are already mostly familiar with QAOA.  \n",
+    "The algorithm evaluates the result of a [QAOA](/reference/Algorithms/qaoa/QAOA.html) optimization procedure to establish correlations in the solution space, then recursively updates the problem structure. We will further assume that you are already mostly familiar with QAOA.  \n",
     "\n",
     "The MIS is defined via a graph with a set of vertices $V$ and a set of edges $E$ . To solve this optimization problem, one has to find the maximum number of vertices, where none of the vertices share a common edge, i.e. we want to find\n",
     "\n",
@@ -118,7 +118,7 @@
    "source": [
     "## The QIRO class\n",
     "\n",
-    "Upon instantiation, the [QIROProblem](../../qiro/QIRO.rst) class requires five arguments: \n",
+    "Upon instantiation, the [QIROProblem](/reference/Algorithms/qiro/QIROProblem.html#qiroproblem) class requires five arguments: \n",
     "\n",
     "* The ``problem`` to be solved, which not necessarly a graph, since QIRO is also implemented for [MaxSat](../../qiro/MaxSatQIRO.rst).\n",
     "* The ``replacement_routine``, which has the job of performing the aforementioned specific reductions to the ``problem`` object.\n",
